--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,112 +1,59 @@
-<nav
-  class="navbar navbar-expand-md border-bottom"
->
+<nav class="navbar navbar-expand-md border-bottom">
   <div class="container">
-    <a class="navbar-brand" routerLink="/"
-      ><img
-        class="me-1 img-fluid logo-image no-dim"
+    <a class="navbar-brand" routerLink="/"><img class="me-1 img-fluid logo-image no-dim"
         src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/cat_logo.png"
-        alt="Techinterview.space logo"
-      />
-      <span>Techinterview.space</span></a
-    >
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+        alt="Techinterview.space logo" />
+      <span>Techinterview.space</span></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div
-      class="collapse navbar-collapse justify-content-end"
-      id="navbarSupportedContent"
-    >
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav mb-2 mb-md-0 align-items-center">
         <li class="nav-item dropdown" *ngFor="let dropdown of dropdowns">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdown"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-            *ngIf="dropdown.show"
-          >
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false" *ngIf="dropdown.show">
             {{ dropdown.title }}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li *ngFor="let link of dropdown.links">
-              <a
-                class="dropdown-item"
-                routerLink="{{ link.url }}"
-                *ngIf="link.show"
-                >{{ link.title }}</a
-              >
+              <a class="dropdown-item" routerLink="{{ link.url }}" *ngIf="link.show">{{ link.title }}</a>
             </li>
           </ul>
         </li>
 
         <!-- Theme Toggle Button -->
         <li class="nav-item ms-2">
-          <button
-            class="btn theme-toggle-btn"
-            type="button"
-            (click)="toggleTheme()"
-            [attr.aria-label]="themeService.getThemeLabel()"
-            [attr.title]="themeService.getNextThemeLabel()"
-          >
-            <i
-              class="bi"
-              [ngClass]="{
+          <button class="btn theme-toggle-btn" type="button" (click)="toggleTheme()"
+            [attr.aria-label]="themeService.getThemeLabel()" [attr.title]="themeService.getNextThemeLabel()">
+            <i class="bi" [ngClass]="{
                 'bi-sun-fill': themeService.isDarkMode(),
                 'bi-moon-fill': !themeService.isDarkMode()
-              }"
-            ></i>
+              }"></i>
           </button>
         </li>
 
         <li class="nav-item ms-2" *ngIf="!loginName; else loggedIn">
-          <a
-            class="btn btn-primary {{
+          <a class="btn btn-primary login-btn {{
               !loginButtonAvailable ? 'disabled' : ''
-            }}"
-            aria-current="page"
-            (click)="login()"
-            [attr.disabled]="!loginButtonAvailable"
-            >Войти</a
-          >
+            }}" aria-current="page" (click)="login()" [attr.disabled]="!loginButtonAvailable">Войти</a>
         </li>
         <ng-template #loggedIn>
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
               {{ loginName }}
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" routerLink="/me">Мой профиль</a></li>
               <li>
-                <a class="dropdown-item" routerLink="users/me/labels"
-                  >Мои теги</a
-                >
+                <a class="dropdown-item" routerLink="users/me/labels">Мои теги</a>
               </li>
-              <li><hr class="dropdown-divider" /></li>
               <li>
-                <a
-                  class="dropdown-item"
-                  routerLink="/admin"
-                  *appHasRole="'admin'"
-                  >Админка</a
-                >
+                <hr class="dropdown-divider" />
+              </li>
+              <li>
+                <a class="dropdown-item" routerLink="/admin" *appHasRole="'admin'">Админка</a>
               </li>
               <li class="cursor-pointer">
                 <a class="dropdown-item" (click)="logout()">Выйти</a>
