--- a/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.html
@@ -40,7 +40,7 @@
   <div class="col-md-3 mb-2">
     <img
       src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/logo_cat_only.png"
-      class="img-fluid"
+      class="img-fluid cat-image"
       alt="logo"
       title="Кот Магеллан, который любит считать деньги"
     />
