--- a/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
@@ -19,48 +19,22 @@
 
         <div class="col-md-3 mb-1">
           <label class="text-sm">Cпециализации</label>
-          <ng-select
-            [items]="professionsAsOptions"
-            [hideSelected]="true"
-            [selectOnTab]="true"
-            bindLabel="label"
-            bindValue="item"
-            placeholder="Все специальности"
-            appendTo="body"
-            formControlName="profsToInclude"
-            [multiple]="true"
-          >
+          <ng-select [items]="professionsAsOptions" [hideSelected]="true" [selectOnTab]="true" bindLabel="label"
+            bindValue="item" placeholder="Все специальности" appendTo="body" formControlName="profsToInclude"
+            [multiple]="true">
           </ng-select>
         </div>
 
         <div class="col-md-3 mb-1">
           <label class="text-sm">Города</label>
-          <ng-select
-            [items]="allCities"
-            [hideSelected]="true"
-            [selectOnTab]="true"
-            bindLabel="label"
-            bindValue="item"
-            placeholder="Выберите города"
-            appendTo="body"
-            formControlName="cities"
-            [multiple]="true"
-          >
+          <ng-select [items]="allCities" [hideSelected]="true" [selectOnTab]="true" bindLabel="label" bindValue="item"
+            placeholder="Выберите города" appendTo="body" formControlName="cities" [multiple]="true">
           </ng-select>
         </div>
         <div class="col-md-3 mb-1">
           <label class="text-sm">Навыки</label>
-          <ng-select
-            [items]="skillsAsOptions"
-            [hideSelected]="true"
-            [selectOnTab]="true"
-            bindLabel="label"
-            bindValue="item"
-            placeholder="Выберите навыки"
-            appendTo="body"
-            formControlName="skills"
-            [multiple]="true"
-          >
+          <ng-select [items]="skillsAsOptions" [hideSelected]="true" [selectOnTab]="true" bindLabel="label"
+            bindValue="item" placeholder="Выберите навыки" appendTo="body" formControlName="skills" [multiple]="true">
           </ng-select>
         </div>
       </div>
@@ -81,19 +55,11 @@
         </div>
 
         <div class="col-md-4 mb-1 d-flex align-items-end">
-          <button type="submit" class="btn btn-outline-dark">Применить</button>
-          <button
-            type="reset"
-            class="btn btn-outline-secondary ms-2 me-2"
-            (click)="reset()"
-          >
+          <button type="submit" class="btn btn-outline-primary">Применить</button>
+          <button type="reset" class="btn btn-outline-dark ms-2 me-2" (click)="reset()">
             Сброс
           </button>
-          <app-share-button
-            [title]="'Поделиться'"
-            [cssBtnSize]="'small'"
-            (shareClicked)="share()"
-          ></app-share-button>
+          <app-share-button [title]="'Поделиться'" [cssBtnSize]="'small'" (shareClicked)="share()"></app-share-button>
         </div>
       </div>
     </form>
